--- a/style.css
+++ b/style.css
@@ -1,39 +1,33 @@
 body {
-    color: red;
-    background: black;
-    margin: 0px;
-    font-family: "Chakra Petch", sans-serif;
-    margin-bottom: 100px;
-}
-
-header {
-    border-bottom: solid 2px rgb(228, 42, 42);
-    padding: 20px;
-    font-size: 32px;
-    color: rgb(228, 42, 42);
-}
-
-.MINA {
-    background: rgb(90, 2, 2);
-    padding-bottom: 100px;
-    padding-top: 100px;
+    background-color: #000000;
+    color: white;
+    font-family: "Helvetica", sans-serif;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
 }
 
-.chamada-texto {
-    margin-right: 5%;
+button {
+    background-color: #f70000;
+    color: rgb(0, 0, 0);
+    font-family: "Helvetica", sans-serif;
 }
 
-h1 {
-    font-size: 40px;
+.passo {
+    display: none;
 }
 
-p {
-    font-size: 20px;
+.passo.ativo {
+    display:block;
 }
 
+main {
+    text-align: center;
+    max-width: 90%;
+}
 
-.categoria h2 {
-    color: rgb(192, 15, 15);
+img {
+    max-width: 90%;
 }
